style/clock.css
@font-face {
  font-family: clock-font;
  src: url(fonts/clock.ttf);
}

#clock-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #d6efc7;
  color: #184d47;
  margin-top: 0;
}

#clock-section h1 {
  font-family: "clock-font", monospace;
}
.clock {
  display: flex;
  background-color: #184d47;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  border-radius: 5px;
  flex-wrap: wrap;
  padding: 2rem;
  /* padding-bottom: 0; */
  width: fit-content;
  margin: 4vh auto;
}

.clock p {
  font-family: "clock-font", monospace;
  color: rgb(45, 175, 67);
  font-size: 5vw;
  margin: 0;
}

.clock .timezone {
  align-self: flex-start;
  font-size: 2vw;
}

@media screen and (max-width: 1000px) {
  .clock p {
    font-size: 10vw;
  }

  .clock .timezone {
    font-size: 5vw;
  }
}

.clock .clock-functions {
  display: flex;
  width: 100%;
  height: 2vh;
  justify-content: center;
  height: fit-content;
}

.clock .clock-button {
  flex: 1 1 auto;
  padding: 1rem;
  font-family: "clock-font", monospace;
  background-color: #184d47;
  color: rgb(45, 175, 67);
  outline: none;
  cursor: pointer;
  display: table-cell;
  vertical-align: middle;
}

.clock .clock-button:hover {
  background: rgb(45, 175, 67);
  color: #184d47;
}

.stopped {
  display: none;
}

